add swagger for card
